--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,54 @@
 /* If you are using @layer @apply or other tailwindcss nested declarations,
       maker sure enable 'tailwindcss/nesting' in your PostCSS configuration
    */
+
+/* src/assets/styles/global.css */
+@font-face {
+  font-family: "SukhumvitSet";
+  src: url("/src/assets/fonts/SukhumvitSet-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SukhumvitSet";
+  src: url("/src/assets/fonts/SukhumvitSet-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SukhumvitSet";
+  src: url("/src/assets/fonts/SukhumvitSet-SemiBold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SukhumvitSet";
+  src: url("/src/assets/fonts/SukhumvitSet-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SukhumvitSet";
+  src: url("/src/assets/fonts/SukhumvitSet-Text.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SukhumvitSet";
+  src: url("/src/assets/fonts/SukhumvitSet-Thin.ttf") format("truetype");
+  font-weight: 100;
+  font-style: normal;
+}
+
+body {
+  font-family: "SukhumvitSet", sans-serif;
+  font-weight: 400;
+}
 @layer base {
   :root {
     --background: 0 0% 100%;
